@@ -43,11 +43,11 @@ except ImportError:  # pragma: no cover
 # to stderr.
 def check_python_version():
     """Check if correct python version is run."""
-    if sys.hexversion < 0x03050000:
+    if sys.hexversion < 0x03050200:
         # We don't use .format() and print_function here just in case someone
         # still has < 2.6 installed.
         version_str = '.'.join(map(str, sys.version_info[:3]))
-        text = ("At least Python 3.5 is required to run qutebrowser, but " +
+        text = ("At least Python 3.5.2 is required to run qutebrowser, but " +
                 "it's running with " + version_str + ".\n")
         if (Tk and  # type: ignore
                 '--no-err-windows' not in sys.argv):  # pragma: no cover
